9 new asteroid pages

--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -147,13 +147,13 @@ link: asteroid-belt
                     </div>
                     <h2 class="paragraphsubheader" id="Exploration">Exploration</h2>
                     <p class="paragraph">
-                        The first spacecraft to make close flybys of the asteroids in the asteroid belt was the Galileo mission while on its way to Jupiter, which encountered the asteroids Gaspra and Ida in 1991 and 1993 respectively.
+                        The first spacecraft to make close flybys of the asteroids in the asteroid belt was the Galileo mission while on its way to Jupiter, which encountered the asteroids <a href=".html">Gaspra</a> and <a href="ida.html">Ida</a> in 1991 and 1993 respectively.
                         It was found that Ida has a small moon orbiting it, named Dactyl.
-                        Other asteroids that were visited by spacecraft on their way to other objects include Annefrank by Stardust and Lutetia and Šteins by Rosetta. 
-                        NEAR Shoemaker, launched in 1996, was also the first dedicated asteroid mission, which first passed by the main-belt Mathilde, after which it entered orbit around near-Earth asteroid Eros.
+                        Other asteroids that were visited by spacecraft on their way to other objects include <a href="annefrank.html">Annefrank</a> by Stardust and <a href="lutetia.html">Lutetia</a> and <a href="steins.html">Šteins</a> by Rosetta. 
+                        NEAR Shoemaker, launched in 1996, was also the first dedicated asteroid mission, which first passed by the main-belt <a href="mathilde.html">Mathilde</a>, after which it entered orbit around near-Earth asteroid <a href="eros.html">Eros</a>.
                         Lucy, a NASA mission that will be the first to visit the Jupiter trojans also encountered two main-belt asteroids.
-                        The first, Dinkinesh, was interesting in that it had a satellite, named Selam, which was a contact binary.
-                        The second asteroid, Donaldjohanson, was itself another contact binary.
+                        The first, <a href="dinkinesh.html">Dinkinesh</a>, was interesting in that it had a satellite, named Selam, which was a contact binary.
+                        The second asteroid, <a href="donaldjohanson.html">Donaldjohanson</a>, was itself another contact binary.
                     </p>
                     <p class="paragraph">
                         The spacecraft Dawn was a mission, launched in 2007, sent to visit the two largest asteroids - Ceres and Vesta.
@@ -171,8 +171,8 @@ link: asteroid-belt
                         One new NASA mission on its way to a main-belt asteroid is Psyche.
                         It will enter orbit around <a href="psyche.html">the asteroid of the same name</a> for 20 months.
                         The reason that Psyche was selected for the mission is due to its metallic composition.
-                        While Lutetia, a previously visited asteroid, is an M-type spectra, data suggests that it is much richer in metals.
-                        Psyche will see if Psyche is an exposed metal core of a protoplanet, or a stone with regolith consisting of metal-rich compounds.
+                        While Lutetia, a previously visited asteroid, is an M-type spectra, data suggests that Psyche is much richer in metals.
+                        Psyche will see if the asteroid is an exposed metal core of a protoplanet, or a stone with regolith consisting of metal-rich compounds.
                     </p>
                     <p class="paragraph">
                         Another upcoming mission is MBR Explorer, planned by the UAE Space Agency.
