--- a/pages/asteroid.html
+++ b/pages/asteroid.html
@@ -44,16 +44,16 @@ link: asteroid
                     He alone discovered 248 asteroids.
                 </p>
                 <p class="paragraph">
-                    The first near-Earth asteroid to be discovered was Eros in 1898.
+                    The first near-Earth asteroid to be discovered was <a href="eros.html">Eros</a> in 1898.
                     Achiles was the first trojan of Jupiter to be discovered in 1906 by Wolf himself.
                     New asteroids were discovered at a much higher rate, requiring more complex provisional naming schemes before getting approved by the Minor Planet Center.
                 </p>
                 <p class="paragraph">
                     Eventually, many much smaller asteroids were being discovered with greater technology.
                     This has proven crucial in the cataloguing of near-Earth asteroids that are potentially hazardous and could strike Earth.
-                    DART, a mission by NASA, was the first to change the orbit of an asteroid, albeit a small one (Didymos's moon Dimorphos.)
+                    DART, a mission by NASA, was the first to change the orbit of an asteroid, albeit a small one (<a href="didymos.html">Didymos</a>'s moon Dimorphos.)
                     A potential use of asteroids, particularly metal-rich ones, is asteroid mining.
-                    The NASA mission Psyche is on its way to the asteroid of the same name to study its composition and formation.
+                    The NASA mission Psyche is on its way to the <a href="psyche.html">asteroid of the same name</a> to study its composition and formation.
                 </p>
                 <h2 class="paragraphheader" id="Classification">Classification</h2>
                 <p class="paragraph">
@@ -104,7 +104,7 @@ link: asteroid
                     Jupiter features the highest population of trojans.
                     They are named after characters from Greek mythology that have fought in the Trojan war, hence the name.
                     The largest L4 trojans have Greek names, while the L5 have Trojan names.
-                    Exceptions are <a href="hektor.html">Hektor</a> (a Trojan prince) and Patroclus (a Greek hero), which are part of their respective enemy camp, as they were named before the convention.
+                    Exceptions are <a href="hektor.html">Hektor</a> (a Trojan prince) and <a href="patroclus.html">Patroclus</a> (a Greek hero), which are part of their respective enemy camp, as they were named before the convention.
                     Hektor is the biggest of the trojan asteroids and is the 12th biggest overall.
                     The Lucy mission by NASA is expected to visit several Trojan asteroids, starting with Eurybates in 2027.
                 </p>
@@ -182,11 +182,11 @@ link: asteroid
                     </div>
                     <h2 class="paragraphsubheader" id="Exploration">Exploration</h2>
                     <p class="paragraph">
-                        The first spacecraft to make close flybys of asteroids was the Galileo mission to Jupiter, which encountered the asteroids Gaspra and Ida in 1991 and 1993 respectively.
-                        Other asteroids that were visited by spacecraft on their way to other objects include Annefrank by Stardust, Braille by Deep Space 1, Lutetia and Šteins by Rosetta, and Toutatis by Chang'e 2, 
+                        The first spacecraft to make close flybys of asteroids was the Galileo mission to Jupiter, which encountered the asteroids <a href="gaspra.html">Gaspra</a> and <a href="ida.html">Ida</a> in 1991 and 1993 respectively.
+                        Other asteroids that were visited by spacecraft on their way to other objects include <a href="annefrank.html">Annefrank</a> by Stardust, <a href="braille.html">Braille</a> by Deep Space 1, <a href="lutetia.html">Lutetia</a> and <a href="steins.html">Šteins</a> by Rosetta, and <a href="toutatis.html">Toutatis</a> by Chang'e 2, 
                     </p>
                     <p class="paragraph">
-                        The first dedicated asteroid mission was NEAR Shoemaker, launched in 1996, which first passed by the main-belt Mathilde, after which it entered orbit around near-Earth asteroid Eros.
+                        The first dedicated asteroid mission was NEAR Shoemaker, launched in 1996, which first passed by the main-belt <a href="mathilde.html">Mathilde</a>, after which it entered orbit around near-Earth asteroid Eros.
                         After one year in orbit, the spacecraft landed on the surface and transmited data for two weeks.
                         The spacecraft Dawn was another general asteroid mission, launched in 2007, and sent to visit the two largest asteroids - Ceres and Vesta.
                         It orbited Vesta for one year, after which it left for Ceres.
@@ -194,13 +194,13 @@ link: asteroid
                     </p>
                     <p class="paragraph">
                         Hayabusa, launched by JAXA in 2003, was the first sample return mission.
-                        It visited the small near-Eart asteroid Itokawa, after which it returned a capsule of regolith back to Earth.
-                        A follow-up mission, Hayabusa-2, visited another asteroid - Ryugu.
+                        It visited the small near-Eart asteroid <a href="itokawa.html">Itokawa</a>, after which it returned a capsule of regolith back to Earth.
+                        A follow-up mission, Hayabusa-2, visited another asteroid - <a href="ryugu.html">Ryugu</a>.
                         The samples returned contained not just silicate rocks, water ice, and simple organics, but also more complex organic compounds like uracil and vitamin B3.
                         The spacecraft's mission has been extended and will now visit two more asteroids.
-                        Meanwhile, the NASA mission OSIRIS-REx mapped extensively the potentially-hazardous asteroid Bennu after which it landed to collect regolith.
+                        Meanwhile, the NASA mission OSIRIS-REx mapped extensively the potentially-hazardous asteroid <a href="bennu.html">Bennu</a> after which it landed to collect regolith.
                         The returned sample showed the presence of amino acids and all nucleobases for DNA and RNA.
-                        The next target of the mission (renamed OSIRIX-APEx for the extended mission) will next target another hazardous asteroid - Apophis.
+                        The next target of the mission (renamed OSIRIX-APEx for the extended mission) will next target another hazardous asteroid - <a href="apophis.html">Apophis</a>.
                     </p>
                     <p class="paragraph">
                         DART was launched in 2021 with one purpose - impacting into an asteroid.
@@ -218,22 +218,22 @@ link: asteroid
                     </div>
                     <h3 class="paragraphsubheader" id="UpcomingMissions">Upcoming missions</h3>
                     <p class="paragraph">
-                        After Hayabusa 2#'s visit of Torifune and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
-                        This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being Kamo'oalewa.
+                        After Hayabusa 2#'s visit of <a href="torifune.html">Torifune</a> and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
+                        This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being <a href="kamooalewa.html">Kamo'oalewa</a>.
                         The spacecraft will then return a capsule and go for its second target, the asteroid 311P/PanSTARRS.
                         CNSA is also proposing a deflection test mission this decade.
                     </p>
                     <p class="paragraph">
                         Lucy is a NASA mission that will be the first to visit the Jupiter trojans.
-                        On its way to the system, the spacecraft has already encountered the main-belt asteroids Dinkinesh and Donaldjohanson.
-                        When it reaches the Greek camp, it will make flybys of four asteroids, and then go to the Trojan camp, making a flyby of Patroclus.
+                        On its way to the system, the spacecraft has already encountered the main-belt asteroids <a href="dinkinesh.html">Dinkinesh</a> and <a href="donaldjohanson.html">Donaldjohanson</a>.
+                        When it reaches the Greek camp, it will make flybys of four asteroids, and then go to the Trojan camp, making a flyby of the binary Patroclus-Menoetius.
                     </p>
                     <p class="paragraph">
                         Another NASA mission on its way to an asteroid is Psyche.
-                        It will enter orbit around <a href="psyche.html">the asteroid of the same name</a> for 20 months.
+                        It will enter orbit around the asteroid of the same name for 20 months.
                         The reason that Psyche was selected for the mission is due to its metallic composition.
-                        While Lutetia, a previously visited asteroid, is an M-type spectra, data suggests that it is much richer in metals.
-                        Psyche will see if Psyche is an exposed metal core of a protoplanet, or a stone with regolith consisting of metal-rich compounds.
+                        While Lutetia, a previously visited asteroid, is an M-type spectra, data suggests that Psyche is much richer in metals.
+                        Psyche will see if the asteroid is an exposed metal core of a protoplanet, or a stone with regolith consisting of metal-rich compounds.
                     </p>
                     <p class="paragraph">
                         JAXA is sending a tech demonstration spacecraft DESTINY+ to the asteroid Phaethon, parent body of the Geminids meteor shower.
