--- a/pages/deimos.html
+++ b/pages/deimos.html
@@ -81,3 +81,6 @@ link: deimos
                         <a href="https://en.wikipedia.org/wiki/Deimos_(moon)">https://en.wikipedia.org/wiki/Deimos_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
