--- a/pages/earth.html
+++ b/pages/earth.html
@@ -77,7 +77,7 @@ link: earth
                 <div class="articlediv">
                     <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/diagrams/seasons-on-earth.jpg" alt="Equinoxes, Solstices and Seasons">
-                        <p class="caption">Equinoxes, Solstices and Seasons</p>
+                        <p class="caption">Equinoxes, Solstices, and Seasons</p>
                     </div>
                     <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                     <p class="paragraph">
@@ -103,10 +103,11 @@ link: earth
                 <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
                 <h3 class="paragraphsubheader" id="Shape">Shape</h3>
                 <p class="paragraph">
-                    Earth is a nearly spherical body with an average diameter of 12,742 km. 
-                    This makes Earth the fifth biggest planet in the Solar System. 
-                    Altitude on Earth is measured relatively to the sea level of 0 m. 
+                    Earth is a nearly idead spherical body with an average diameter of 12,742 km. 
+                    This makes Earth the fifth largest planet in the Solar System. 
+                    Altitude on Earth is measured relatively to the mean sea level of 0 m. 
                     Due to Earth's rotation, the lands around the Equator are farther from the cener than the poles.
+                    Because of its slight oblateness and surface features, Earth's shape has been thoroughly studied to create a model, known as a geoid.
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right h240">
@@ -164,7 +165,7 @@ link: earth
                     </div>
                     <h3 class="paragraphsubheader" id="Atmosphere">Atmosphere</h3>
                     <p class="paragraph">
-                        The athmosphere of Earth is mostly made up of 78% nitrogen and 21% oxygen. 
+                        The atmosphere of Earth is mostly made up of 78% nitrogen and 21% oxygen. 
                         The remaining 1% consisting of other gases like water vapors, argon, carbon dioxide, neon, helium, methane and krypton.
                         Carbon dioxide and other greenhouse gases like methane capture part of the energy from the <a href="sun.html">Sun</a> and warm the Earth. 
                         Those gases increase every year due to human activity, resulting in rising average temperatures.
