--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -65,7 +65,7 @@ link: jupiter
                     These asteroids are divided into two groups: the Greek camp, clustered around the leading Lagrange point (L4), and the Trojan camp, around the trailing Lagrange point (L5).
                     As of August 2025, there are 15,283 trojan asteroids according to the Minor Planet Center.
                     The Greek camp contains 9,691 known trojans, with the largest being <a href="hektor.html">624 Hektor</a>, 911 Agamemnon, and 588 Achilles.
-                    The Trojan camp, meanwhile, includes 5,592 known asteroids, with the most prominent being the binary 617 Patroclus-Menoetius, 3451 Mentor, and 3317 Paris.
+                    The Trojan camp, meanwhile, includes 5,592 known asteroids, with the most prominent being the binary <a href="patroclus.html">617 Patroclus</a>-Menoetius, 3451 Mentor, and 3317 Paris.
                 </p>
                 <p class="paragraph">
                     Other planets, with the exception of <a href="mercury.html">Mercury</a> also have their own co-orbiting minor planets.
