--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -216,12 +216,16 @@ link: natural-satellite
                     </p>
                 </div>
                 <div class="articlediv">
+                    <div class="captionbox right h120">
+                        <img class="articleimage" src="../assets/images/asteroids/ida.jpg" alt="Ida">
+                        <p class="caption">Ida and its small moon Dactyl</p>
+                    </div>
                     <h2 class="paragraphheader" id="SatellitesOfSmallSolarSystemBodies">Satellites of small Solar System bodies</h2>
                     <p class="paragraph">
                         It is possible for asteroids and other small Solar System bodies to have satellites. 
-                        The first one to be discovered was 243 Ida's satellite Dactyl. 
+                        The first one to be discovered was <a href="ida.html">243 Ida</a>'s satellite Dactyl. 
                         Some asteroids have more than one satellite. 
-                        90 Antiope and 617 Patroclus are binary systems, where the two bodies in each system are of similar sizes.
+                        90 Antiope and <a href="patroclus.html">617 Patroclus</a> are binary systems, where the two bodies in each system are of similar sizes.
                         An interesting case is the triple system of the <a href="tno.html">trans-Neptunian object</a> Lempo, which is a binary with a third smaller body.
                     </p>
                 </div>
