--- a/pages/nea.html
+++ b/pages/nea.html
@@ -12,7 +12,7 @@ link: nea
                 </p>
                 <p class="paragraph">
                     Several asteroids that have very close orbits to Earth are classified as potentially hazardous.
-                    For that reason, NASA launched the mission DART to test asteroid deflection, successfully changing the orbits of Didymos's moon Dimorphos.
+                    For that reason, NASA launched the mission DART to test asteroid deflection, successfully changing the orbits of <a href="didymos.html">Didymos</a>'s moon Dimorphos.
                     Other agencies are also considering similar missions.
                 </p>
                 <div class="articlediv">
@@ -22,7 +22,7 @@ link: nea
                     </div>
                     <h2 class="paragraphheader" id="Discoveries">Discoveries</h2>
                     <p class="paragraph">
-                        The first near-Earth asteroid to be discovered was Eros in 1898.
+                        The first near-Earth asteroid to be discovered was <a href="eros.html">Eros</a> in 1898.
                         The asteroid was subject to several extensive observation campaigns, primarily because measurements of its orbit helped to determine the exact distance of the Earth from the Sun.
                         In 1908, the Tunguska event was recorded in Russia, the largest object to strike Earth in recorded history, estimated to be up to 85 km in diameter.
                         It resulted in several thousand kilometers of burnt forest and possibly three deaths.
@@ -38,7 +38,7 @@ link: nea
                         In 1989, the 300 m asteroid Asclepius passed within 700 000 km from Earth.
                         If it had hit Earth at the time, it could have produced an explosion of 20 000 megatons, never recorded in history.
                         This pointed out the dangers of such objects, especially given that it was discovered after the closest approach.
-                        Similarly threatening was Apophis, an asteroid that in 2004 was predicted to have a 2.7% chance of collision with Earth in 2029.
+                        Similarly threatening was <a href="apophis.html">Apophis</a>, an asteroid that in 2004 was predicted to have a 2.7% chance of collision with Earth in 2029.
                         Later estimates ruled out the collision event and instead it will pass within only 31 000 km.
                         The largest to actually enter the atmosphere and become a meteor since 1908's Tunguska event was in 2013 near Chelybinsk, Russia, likely measuring around 20 km.
                     </p>
@@ -74,7 +74,7 @@ link: nea
                     There are two major risk assesment scales - the Torino scale and the Palermo scale.
                     The Torino scale uses the probability and the kinetic energy of an impact to give a score between 0 and 10, with 10 being the most severe.
                     A more complex rating is the logarithmic Palermo scale which uses the two variables, as well as the time interval until the potential impact and can be either negative (low risk) or positive (higher risk).
-                    So far only three asteroids were considered of higher risk according to that scale, including Apophis, ehich had a value of 1,1.
+                    So far only three asteroids were considered of higher risk according to that scale, including Apophis, which had a value of 1,1.
                 </p>
                 <p class="paragraph">
                     There have been numerous documented cases of smaller objects entering the atmosphere.
@@ -90,18 +90,19 @@ link: nea
                     <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                     <p class="paragraph">
                         Several asteroid missions have targeted near-Earth asteroids for their proximity.
-                        The first mission to visit one was NEAR Shoemaker, launched in 1996, which first passed by the <a href="asteroid-belt.html">main-belt</a> Mathilde, after which it entered orbit around Eros.
+                        The first mission to visit one was NEAR Shoemaker, launched in 1996, which first passed by the <a href="asteroid-belt.html">main-belt</a> <a href="mathilde.html">Mathilde</a>, after which it entered orbit around Eros.
                         After one year in orbit, the spacecraft landed on the surface and transmited data for two weeks.
                     </p>
                     <p class="paragraph">
-                        Hayabusa, launched by JAXA in 2003, was the first sample return mission of an asteroid.
-                        It visited the small asteroid Itokawa, after which it returned a capsule of regolith back to Earth.
-                        A follow-up mission, Hayabusa-2, visited another asteroid - Ryugu.
-                        The samples returned contained not just silicate rocks, water ice, and simple organics, but also kore complex organic compounds like uracil and vitamin B3.
+                        Hayabusa, launched by JAXA in 2003, was the first sample return mission.
+                        It visited the small near-Eart asteroid <a href="itokawa.html">Itokawa</a>, after which it returned a capsule of regolith back to Earth.
+                        A follow-up mission, Hayabusa-2, visited another asteroid - <a href="ryugu.html">Ryugu</a>.
+                        The samples returned contained not just silicate rocks, water ice, and simple organics, but also more complex organic compounds like uracil and vitamin B3.
                         The spacecraft's mission has been extended and will now visit two more asteroids.
-                        Meanwhile, the NASA mission OSIRIS-REx mapped extensively the potentially-hazardous asteroid Bennu after which it landed to collect regolith.
+                        Meanwhile, the NASA mission OSIRIS-REx mapped extensively the potentially-hazardous asteroid <a href="bennu.html">Bennu</a> after which it landed to collect regolith.
                         The returned sample showed the presence of amino acids and all nucleobases for DNA and RNA.
                         The next target of the mission (renamed OSIRIX-APEx for the extended mission) will next target another hazardous asteroid - Apophis.
+                        There are also two proposal missions by ESA to Apophis but without taking samples.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -118,11 +119,11 @@ link: nea
                         Hera, a follow-up mission by ESA is on its way to the system to further investigate it.
                     </p>
                     <p class="paragraph">
-                        One more near-Earth asteroid has been visited as a secondary target, that being Toutatis by Chang'e 2. 
+                        One more near-Earth asteroid has been visited as a secondary target, that being <a href="toutatis.html">Toutatis</a> by Chang'e 2. 
                     </p>
                     <p class="paragraph">
-                        After Hayabusa 2#'s visit of Torifune and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
-                        This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being Kamo'oalewa.
+                        After Hayabusa 2#'s visit of <a href="torifune.html">Torifune</a> and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
+                        This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being <a href="kamooalewa.html">Kamo'oalewa</a>.
                         The spacecraft will then return a capsule and go for its second target, the asteroid 311P/PanSTARRS.
                         CNSA is also proposing a deflection test mission this decade.
                     </p>
