--- a/pages/phobos.html
+++ b/pages/phobos.html
@@ -111,3 +111,6 @@ link: phobos
                         <a href="https://en.wikipedia.org/wiki/Phobos_(moon)">https://en.wikipedia.org/wiki/Phobos_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
