--- a/pages/trojan.html
+++ b/pages/trojan.html
@@ -32,7 +32,7 @@ link: trojan
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right h240">
-                        <img class="articleimage" src="../assets/images/diagramss/lagrange points.png" alt="Lagrange points">
+                        <img class="articleimage" src="../assets/images/diagrams/lagrange-points.png" alt="Lagrange points">
                         <p class="caption">Lagrange points, highlighted in red. Trojans orbit close to the L4 and L5 points. <a href="https://commons.wikimedia.org/wiki/File:Lagrange_very_massive.svg">Source</a></p>
                     </div>
                     <h2 class="paragraphheader" id="Orbits">Orbits</h2>
@@ -50,7 +50,7 @@ link: trojan
                     They are named after characters from Greek mythology that have fought in the Trojan war, hence the name.
                     These asteroids are divided into two groups: the Greek camp, clustered around the leading Lagrange point (L4), and the Trojan camp, around the trailing Lagrange point (L5).
                     The largest L4 trojans have Greek names, while the L5 have Trojan names.
-                    Exceptions are Hektor (a Trojan prince) and Patroclus (a Greek hero), which are part of their respective enemy camp, as they were named before the convention.
+                    Exceptions are Hektor (a Trojan prince) and <a href="patroclus.html">Patroclus</a> (a Greek hero), which are part of their respective enemy camp, as they were named before the convention.
                 </p>
                 <p class="paragraph">
                     As of August 2025, there are 15,283 trojan asteroids according to the Minor Planet Center.
@@ -88,7 +88,7 @@ link: trojan
                 <p class="paragraph">
                     So far, no trojan has been explored from up-close.
                     Lucy is a NASA mission that will be the first to visit the Jupiter trojans.
-                    On its way to the system, the spacecraft has already encountered the main-belt asteroids Dinkinesh and Donaldjohanson.
+                    On its way to the system, the spacecraft has already encountered the main-belt asteroids <a href="dinkinesh.html">Dinkinesh</a> and <a href="donaldjohanson.html">Donaldjohanson</a>.
                     When it reaches the Greek camp, it will make flybys of four asteroids - Eurybates, Polymeles, Leucus, and Orus.
                     After that, it will go to the Trojan camp, making a flyby of the binary Patroclus-Menoetius.
                 </p>
